# langchain-looker-sql-agent

./: .env.example  .gitignore  EXAMPLES_SETUP.md  README.md  TECHNICAL_DETAILS.md  TECHNICAL_README.md  langchain_looker_agent_guide.md  langchain_looker_sql_agent_guide.md  pyproject.toml  requirements.txt
examples/: looker_langchain_sql_agent_tests.ipynb  looker_langchain_sql_agent_tests_no_envs.ipynb  quickstart.py
notebooks/: looker_agent_conversational_test.ipynb  looker_langchain_sql_agent_tests.ipynb  setup_looker_agent_env.ipynb
notebooks/test_output/: looker_agent_conversational_test.txt  looker_langchain_sql_agent_tests_output.txt
src/langchain_looker_agent/: __init__.py  agent.py  langchain_looker_sql_agent.py
tests/: test_agent_components.py  test_looker_sql_database.py
