# looker-langchain-sql-agent/pyproject.toml

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-looker-agent" 
version = "0.1.5" 
authors = [
  { name="Mark Rittman", email="mark.rittman@rittmananalytics.com" }, 
]
description = "A LangChain SQL agent for querying Looker via its Open SQL Interface (JDBC/Avatica)."
readme = "README.md"
requires-python = ">=3.8"
license = { text="Apache-2.0" } # 
keywords = ["langchain", "looker", "sql", "agent", "llm", "conversational bi", "jdbc", "avatica"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License", 
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "langchain-core>=0.1.52", 
    "langchain-community>=0.0.38", 
    "langchain>=0.1.20", 
    "jaydebeapi>=1.2.3",
    "JPype1>=1.4.0",
    # Note: langchain-openai is not a direct dependency of the library itself,
    # but of the example notebooks. 
]

[project.urls]
Homepage = "https://github.com/rittmananalytics/langchain-looker-sql-agent" 
Repository = "https://github.com/rittmananalytics/langchain-looker-sql-agent.git" 
Issues = "https://github.com/rittmananalytics/langchain-looker-sql-agent/issues" 